--- a/src/app/components/Assets/FontFace.css
+++ b/src/app/components/Assets/FontFace.css
@@ -1,9 +1,9 @@
-/* @font-face {
+@font-face {
   font-family: 'Museo Sans';
   font-style: normal;
   font-weight: 300;
   src: url('./fonts/MuseoSans_300.otf') format('opentype');
-} */
+}
 @font-face {
   font-family: 'Museo Sans';
   font-style: normal;
