--- a/src/app/components/Assets/FontFace.css
+++ b/src/app/components/Assets/FontFace.css
@@ -1,20 +1,21 @@
 @font-face {
   font-family: 'Museo Sans';
   font-style: normal;
-  font-weight: 300;
-  src: url('./fonts/MuseoSans_300.otf') format('opentype');
-}
-@font-face {
-  font-family: 'Museo Sans';
-  font-style: normal;
-  font-weight: 500;
+  font-weight: 400;
   src: url('./fonts/MuseoSans_500.woff2') format('woff2'),
     url('./fonts/MuseoSans_500.woff') format('woff');
 }
 @font-face {
   font-family: 'Museo Sans';
   font-style: normal;
-  font-weight: 700;
+  font-weight: 600;
   src: url('./fonts/MuseoSans_700.woff2') format('woff2'),
     url('./fonts/MuseoSans_700.woff') format('woff');
+}
+@font-face {
+  font-family: 'Museo Sans';
+  font-style: normal;
+  font-weight: 700;
+  src: url('./fonts/MuseoSans_900.woff2') format('woff2'),
+    url('./fonts/MuseoSans_900.woff') format('woff');
 }
